# pluginengine

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
engine/: CMakeLists.txt
engine/src/engine/: engine.cpp  engine.h  plugin.h  pluginmanager.cpp  pluginmanager.h
plugins/: CMakeLists.txt
plugins/linuxplugin/: CMakeLists.txt  linuxplugin.cpp  linuxplugin.h
plugins/macplugin/: CMakeLists.txt  macplugin.h  macplugin.mm
plugins/plugin1/: CMakeLists.txt
plugins/plugin1/src/: plugin1.cpp
plugins/zigplug/: build.zig
plugins/zigplug/src/: main.zig
